syntax = "proto3";

package scuffle.video.v1.types;

message AccessTokenScope {
    // A permission is the ability to perform an action on a resource
    enum Permission {
        // The read permission allows reading of a resource
        READ = 0;
        // The write permission allows writing to a resource
        WRITE = 1;
        // The modify permission allows modification of a resource
        MODIFY = 2;
        // The delete permission allows deletion of a resource
        DELETE = 3;
        // The admin permission allows access to all actions on a resource and 
        // all future actions on a resource without needing to update the scope.
        ADMIN = 4;
    }

    // Requires at least one permission to be set
    repeated Permission permission = 1;

    enum Resource {
        // The room resource allows access to rooms
        ROOM = 0;
        // The recording resource allows access to recordings
        RECORDING = 1;
        // The transcoding config resource allows access to transcoding configs
        TRANSCODING_CONFIG = 2;
        // The recording config resource allows access to recording configs
        RECORDING_CONFIG = 3;
        // The playback key pair resource allows access to playback key pairs
        PLAYBACK_KEY_PAIR = 4;
        // The playback session resource allows access to playback sessions
        PLAYBACK_SESSION = 5;
        // The access token resource allows access to access tokens
        // If you scope a token to allow for the creation of access tokens,
        // you can only create access tokens with the same or less permissions.
        ACCESS_TOKEN = 6;
    }

    // If not set, the permission applies to all resources
    optional Resource resource = 2;
}
